# shur

./: Cargo.toml  README.md  test.dot  tset.dot
examples/: shur_2_4.txt  shur_3_13.txt  shur_3_8.txt  shur_4_20.txt  shur_4_25.txt  shur_4_30.txt  shur_4_35.txt  shur_4_40.txt  shur_4_43.txt  shur_4_44.txt  shur_5_100.txt  shur_5_45.txt  shur_5_50.txt  shur_5_60.txt  shur_5_70.txt  shur_5_80.txt  shur_5_90.txt
src/: check.rs  create_dot.rs  shur.rs  util.rs
src/algorithm/: mod.rs  random.rs  search.rs
templates/: graph.dot
