[[bin]]
name = "shur"
path = "src/shur.rs"

[[bin]]
name = "check"
path = "src/check.rs"

[[bin]]
name = "create_dot"
path = "src/create_dot.rs"

[package]
name = "shur"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
rand = "0.9.2"
tera = "1.20.1"
